--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,40 @@
 .header-container {
     border: 1px solid;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-left: 24px;
+    padding-right: 24px;
 }
 
 .logo-icon {
-    width: 50pk;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     border: 1px solid;
 }
 
 .nav-container > button {
-    height: 40px;
+    height: 25px;
+}
+
+p {
+    font-family: monospace;
+}
+
+.content-container {
+    flex-direction: row;
+    display: flex;
+}
+
+.content-container > div {
+    display: flex;
+    flex: 1;
+    align-content: center;
+    justify-content: center;
+}
+
+img {
+    width: 300px;
+    height: 300px;
+    border-radius: 20px;
 }
