--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
+h1 {
+    font-family: Verdana;
+}
+
+h2 {
+    font-family: Verdana;
+}
+
+h2 {
+    padding-bottom: 20px;
+}
+
 .header-container {
     border: 1px solid;
     display: flex;
@@ -28,7 +40,7 @@ p {
 
 .content-container > div {
     display: flex;
-    flex: 1;
+    flex: 2;
     align-content: center;
     justify-content: center;
 }
@@ -36,5 +48,10 @@ p {
 img {
     width: 300px;
     height: 300px;
+    border-radius: 20px;
+}
+
+.contact {
+    background-color:blanchedalmond;
     border-radius: 20px;
 }
